feat: 输出代码特征和心理特征

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,8 @@
 
 # test file
 *test*
+dataset/
+report/
 
 # config
 .DS_Store
@@ -11,3 +13,6 @@
 
 # compile file
 __pycache__/
+
+# log file
+*.log
